--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ figure {
 ::selection {
   color: #fff;
   background: #2c98f0; }
-#main-page {
+#colorlib-page {
   width: 100%;
   overflow: hidden;
   position: relative; }
